chore: add min-height to prevent jumping

--- a/packages/components/src/flowNavigation/FlowNavigation.less
+++ b/packages/components/src/flowNavigation/FlowNavigation.less
@@ -4,6 +4,7 @@
 
 .np-flow-navigation {
   width: 100%;
+  min-height: 96px;
   &--border-bottom {
     border-bottom: 1px solid var(--color-border-neutral);
   }
