--- a/packages/components/src/overlayHeader/OverlayHeader.less
+++ b/packages/components/src/overlayHeader/OverlayHeader.less
@@ -1,6 +1,7 @@
 @import (reference) '@transferwise/neptune-css/src/less/addons/_spacing-utilities.less';
 
 .np-overlay-header {
+  min-height: 96px;
   .separator {
     .m-x-2;
     height: var(--size-32);
